k8s/production/cdash/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdash
  namespace: cdash
  labels:
    app: cdash
    svc: web
spec:
  selector:
    matchLabels:
      app: cdash
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: cdash
        svc: web
    spec:
      restartPolicy: Always
      containers:
      - name: cdash
        image: kitware/cdash:v3.2.0-rc1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1600m
            memory: 2G
        ports:
        - containerPort: 8080
          name: web

        volumeMounts:
          - name: cdash-site-ssl-config-volume
            mountPath: /etc/apache2/sites-available/cdash-site-ssl.conf
            subPath: cdash-site-ssl.conf
          - name: cdash-site-ssl-config-volume
            mountPath: /etc/apache2/ports.conf
            subPath: ports.conf

      volumes:
      - name: cdash-site-ssl-config-volume
        configMap:
          name: cdash-site-ssl-config

      nodeSelector:
        spack.io/node-pool: base
