k8s/production/cdash/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdash
  namespace: cdash
  labels:
    app: cdash
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    app: cdash
    svc: web
