k8s/production/cdash/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cdash
  namespace: cdash
spec:
  parentRefs:
    - name: spack-gateway
      namespace: gateway-api
  hostnames:
    - cdash.spack.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cdash-website
          port: 8080
