k8s/production/cdash/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdash
  namespace: cdash
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-cdash
  rules:
  - host: cdash.spack.io
    http:
      paths:
      - backend:
          service:
            name: cdash
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
